NetBSD Problem Report #50974

From www@NetBSD.org  Thu Mar 17 17:30:23 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 0607C7ACA0
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 17 Mar 2016 17:30:23 +0000 (UTC)
Message-Id: <20160317173022.355EC7ACC3@mollari.NetBSD.org>
Date: Thu, 17 Mar 2016 17:30:22 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sbin/fsck_lfs/setup.c:447 set but not used ?
X-Send-Pr-Version: www-1.0

>Number:         50974
>Category:       bin
>Synopsis:       src/sbin/fsck_lfs/setup.c:447 set but not used ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 17 17:35:00 +0000 2016
>Closed-Date:    Thu Mar 17 23:29:45 +0000 2016
>Last-Modified:  Thu Mar 17 23:29:45 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160317
>Organization:
>Environment:
>Description:

[src/sbin/fsck_lfs/setup.c:447]: (style) Variable 'bmapsize' is assigned a value that is never used.


Source code is

    bmapsize = maxfsblock * sizeof(ino_t);


Suggest either use the variable or delete it.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50974 CVS commit: src/sbin/fsck_lfs
Date: Thu, 17 Mar 2016 14:56:14 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Thu Mar 17 18:56:14 UTC 2016

 Modified Files:
 	src/sbin/fsck_lfs: setup.c

 Log Message:
 PR/50974: David Binderman: Remove unused code.


 To generate a diff of this commit:
 cvs rdiff -u -r1.60 -r1.61 src/sbin/fsck_lfs/setup.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Thu, 17 Mar 2016 23:29:45 +0000
State-Changed-Why:
Christos fixed it, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.