PR/50974: David Binderman: Remove unused code.